--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
             <nav>
                 <ul class="site-nav">
                     <li class="current-link"><a href="./index.html" class="nav-item ">Студія</a></li>
-                    <li class="current-link current"><a href="./porfolio.html" class="nav-item current ">Портфоліо</a>
+                    <li class="current-link current"><a href="./portfolio.html" class="nav-item current ">Портфоліо</a>
                     </li>
                     <li class="current-link"><a href="" class="nav-item">Контакти</a></li>
                 </ul>
