--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<nav>
 				<ul class="site-nav">
 					<li class="current-link current"><a href="./index.html" class="nav-item current">Студія</a></li>
-					<li class="current-link"><a href="./porfolio.html" class="nav-item ">Портфоліо</a></li>
+					<li class="current-link"><a href="./portfolio.html" class="nav-item ">Портфоліо</a></li>
 					<li class="current-link"><a href="" class="nav-item">Контакти</a></li>
 				</ul>
 			</nav>
